Fix spacing around buttons

--- a/style.css
+++ b/style.css
@@ -19,13 +19,9 @@ body {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1.5fr;
-    padding: 15px 50px;
-    gap: 10px 30px;
+    padding: 10px 75px 15px 40px;
+    gap: 10px 20px;
 }
-
-/* .header > div {
-    border: 1px solid black;
-} */
 
 .header .icon {
     width: 2.5rem;
@@ -81,8 +77,8 @@ body {
 .btn-container {
     display: flex;
     align-items: center;
-    justify-content: end;
-    gap: 30px;
+    justify-content: space-evenly;
+    gap: 10px;
 }
 
 .btn-container button {
@@ -95,8 +91,17 @@ body {
 .sidebar {
     grid-row: 1 / 3;
     display: grid;
-    row-gap: 30px;
+    row-gap: 20px;
     padding: 10px 15px;
+    grid-template-rows: auto auto 1fr;
+}
+
+.sidebar .main-links {
+    padding-bottom: 10px;
+}
+
+.logo h1 {
+    margin: 0;
 }
 
 .logo,
@@ -108,6 +113,7 @@ body {
 .sidebar ul {
     margin: 0;
     padding: 0;
+    padding-left: 15px;
 }
 
 .logo {
